src/test/ui/parser/do-catch-suggests-try.stderr
error: found removed `do catch` syntax
  --> $DIR/do-catch-suggests-try.rs:2:25
   |
LL |     let _: Option<()> = do catch {};
   |                         ^^
   |
   = help: Following RFC #2388, the new non-placeholder syntax is `try`

error: aborting due to previous error

